2006-12-01  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* README: Added dependency information.

	* configure.ac: Added check for boost/ptr_container headers.

	* include/dlvhex/AtomNode.h: Documentation.
	* include/dlvhex/PluginInterface.h: Likewise.

	* src/dlvhex/SafetyChecker.cpp (SafetyCheckerBase), (throw): Modified
	verbose output.

2006-11-28  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dlvhex/AtomNode.cpp (AtomNode::getRules): Update
	documentation.

2006-11-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/Rule.h: Fix WeakConstraint head atoms handling.
	* src/dlvhex/Rule.cpp: Likewise.

	* include/dlvhex/ExternalAtom.h
	(ExternalAtom::getArity,ExternalAtom::getArguments): Remove.
	* src/dlvhex/ExternalAtom.cpp: Likewise.

	* src/dlvhex/DependencyGraph.cpp: Fix compiler warning.

	* src/dlvhex/Component.cpp: Call AtomNode::getRules only once.
	* src/dlvhex/FixpointModelGenerator.cpp: Likewise.
	* src/dlvhex/GuessCheckModelGenerator.cpp: Likewise.
	* src/dlvhex/OrdinaryModelGenerator.cpp: Likewise.

	* src/dlvhex/Makefile.am: Bump library version to 4:0:0.

	* src/dlvhex/GraphBuilder.cpp (GraphBuilder::run): Create
	Dependency with a rule identifier.

	* include/dlvhex/AtomNode.h: (Dependency::getRuleID): Get rule
	identifier of a dependency.
	(AtomNode::getRules): Create rules of a head atom in an on-the-fly
	fashion.
	* src/dlvhex/AtomNode.cpp: Likewise.

	* include/dlvhex/Rule.h (Rule::addHead,Rule::addBody): New methods.
	* src/dlvhex/Rule.cpp: Likewise.

2006-11-19  Roman Schindlauer  <roman@kr.tuwien.ac.at>

	* include/dlvhex/AtomNode.h: Changed "const Rule*" to "Rule*" in addRule() and
	getRules() and vector of rules.
	* src/dlvhex/AtomNode.cpp (addRule), (operator): Likewise.

	* include/dlvhex/PluginInterface.h: Documentation.

	* include/dlvhex/Program.h: Added iterator in addition to const_iterator.
	Removed const from Rule* in ruleset_t and addRule(), addWeakConstraint().
	Added deleteRule().